# serializer version: 1
# name: test_liveness_when_four_tools_finish_does_show_only_last_three
  '''
  ╭─ supervise ecstatic-ts · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────╮
  │ time                                                                           4s  cap in 7h 59m │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │   waiting  0s                                                                                    │
  │   00:00:05  Read   src/c.ts  3s                                                                  │
  │   00:00:04  Bash   npm test  2s                                                                  │
  │   00:00:03  Edit   src/b.ts  1s                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_liveness_when_iterate_tool_has_sidecar_does_show_passes_bar
  '''
  ╭─ supervise ecstatic-ts · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────╮
  │ time ━━━━                                                                  31m 1s  cap in 7h 28m │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │   00:00:02  Bash   gymrat iterate  31m 0s                                                        │
  │   passes 7/10 · 31m 0s · ~11m 15s left                                                           │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
